# miya-lis.net

./: .dev.vars  .env  .envrc  .gitignore  Index.re  README.md  build.sh  deploy.sh  dune  dune-project  index.html  miya-lis.opam  package-lock.json  package.json  tailwind.config.js  vite.config.mjs  wrangler.toml
.github/workflows/: build.yml  deploy.yml
_build/: .copy-db  .db  .digest-db  log
_build/default/: Index.re  Index.re.ml  Index.re.pp.ml  README.md  melange-for-react-devs.dune-package  melange-for-react-devs.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.merlin-conf/: melange-output
_build/default/.output.mobjs/melange/: melange.cmi  melange.cmj  melange.cmt  melange__Index.cmi  melange__Index.cmj  (+1 more)
_build/default/output/: Index.js
_build/default/src/: Index.re  Index.re.ml  Index.re.pp.ml  index.css
functions/: helloworld.ts
functions/api/: db.ts
pages/: helloworld.ts
pages/functions/api/: db.ts
public/js/: boids.js
src/: Index.re  dune  index.css
src/build_static/: dune
src/components/: DB.re  Header.re  Hello.re  Layout.re  Makrdown.re  P5.re  Util.re  dune
src/components/ReactJS/: DB.jsx  Hello.tsx  ReactMarkdown.jsx  SampleSketch.jsx  Squid.jsx
src/lib/r/: R.re  dune
src/pages/: BookShelf.re  Home.re  Link.re  MISC.re  Sakana.re  dune
src/styles/: global.css  global_bak.css  index.css
static/js/: boids.js
worker-dist/: miya-lis.dune-package  miya-lis.install
worker-dist/src/components/: Header.re  Header.re.pp.ml  Makrdown.re  Post.re
worker-dist/src/pages/: AboutMe.re  Sakana.re.ml
(+135 files in other folders)
